--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta property="og:title" content="Metode Terbukti">
 <meta property="og:description" content="">
-<meta property="og:image" content="https://i.ibb.co/WnnMt9V/5-cm-dalam-12-hari-2022-07-28-T130245-423.png">
+<meta property="og:image" content="https://i.artfile.ru/1920x1200_1508654_[www.ArtFile.ru].jpg">
   <title>New Promotion</title>
   <meta name="description" content="Cold">
   <meta name="keywords" content="Nutrition">
